[package]
name = "lmq-capi"
version = "0.1.0"
edition = "2024"
description = "C API for the Linked Message Queue Rust library."
repository = "https://github.com/adakite1/skycurrent"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"
lmq = { path = "../lmq", default-features = false }
tokio = { version = "1.0", optional = true, default-features = false }

[features]
default = [
    "autodrop", 
    "tokio"
]
autodrop = [
    "lmq/autodrop"
]
tokio = [
    "dep:tokio", 
    "tokio/rt-multi-thread"
]
