[package]
name = "lmq-capi"
version = "0.1.0"
edition = "2024"
description = "C API for the Linked Message Queue Rust library."
repository = "https://github.com/adakite1/skycurrent"
license = "MIT OR Apache-2.0"

[lib]
name = "lmq"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"
rand = "0.9"
lmq-rs = { package = "lmq", path = "../lmq", default-features = false }
tokio = { version = "1.44", optional = true, default-features = false }
parking_lot = { version = "0.12", optional = true }

[features]
default = [
    "autodrop", 
    "tokio"
]
autodrop = [
    "lmq-rs/autodrop"
]
tokio = [
    "dep:tokio", 
    "dep:parking_lot", 
    "tokio/rt-multi-thread"
]
