[package]
name = "lmq-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM API for the Linked Message Queue Rust library."
repository = "https://github.com/adakite1/skycurrent"
license = "MIT OR Apache-2.0"

[lib]
name = "lmq"
crate-type = ["cdylib"]

[dependencies]
lmq-rs = { package = "lmq", path = "../lmq", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[features]
default = [
    "autodrop"
]
autodrop = [
    "lmq-rs/autodrop"
]
