[package]
name = "lmq"
version = "0.1.0"
edition = "2024"
description = "Linked Message Queue"
repository = "https://github.com/adakite1/skycurrent"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = { version = "0.12", features = ["send_guard"] }
pollster = "0.4"
tokio = { version = "1.0", features = ["sync"], default-features = false }
rand = { version = "0.9.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[features]
default = [
    "autodrop", 
    "wasm"
]
autodrop = [
    "dep:rand"
]
wasm = [
    "dep:wasm-bindgen", 
    "dep:wasm-bindgen-futures", 
    "dep:getrandom"
]
