[package]
name = "lmq"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Linked Message Queue"
repository = "https://github.com/adakite1/skycurrent"
license = "MIT OR Apache-2.0"

[dependencies]
parking_lot = { version = "0.12", features = ["send_guard"] }
pollster = "0.4"
tokio = { version = "1.44", features = ["sync"], default-features = false }
rand = { version = "0.9.0", optional = true }

[features]
default = [
    "autodrop"
]
autodrop = [
    "dep:rand"
]
